Added selectionRotation icon, dolled up the rotation capabilities a bit more.

--- a/src/interfaces/default/layout.xhtml
+++ b/src/interfaces/default/layout.xhtml
@@ -154,6 +154,7 @@
       <p data-pwCommand="selectionCrop">Crop selection</p>
       <p data-pwCommand="selectionDelete">Delete selection</p>
       <p data-pwCommand="selectionFill">Fill selection</p>
+      <p data-pwCommand="selectionRotation">Rotate selection</p>
 
       <p class="paintweb_opt_selectionTransparent">
         <label><input data-pwConfig="selection.transparent" type="checkbox" 
